Code improvements (#162)
* Move every createCloudService method into a new factory class

* Moved everything with cloud services into new provider classes

* Added some documentation

* Moved everything with groups/tasks into new provider classes

* Moved everything with permissions into a new provider class

* Moved default installations into an extra class

* Fixed stupid mistake

* Moved forgotten method "getCloudServices" to "GeneralCloudServiceProvider"

* Moved default task installations into extra methods

* Some more documentation

* Some more documentation

* Moved some methods into extra classes

* More deprecated methods

* Reformat code

* Reformat code

* Reformat code

* Replace every deprecated method with a new one

* Replace StringBuilder with String.join

* Fixed many warnings

* Move packet-methods from CloudNetDriver to PacketStation